--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "prisma": "^6.3.0",
     "react": "^19.0.0",
