--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.11.0",
+    "@prisma/client": "^6.3.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "prisma": "^6.3.0",
