--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
+    "next-test-api-route-handler": "^4.0.14",
     "prisma": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
