installed ably realtime

--- a/.example.env
+++ b/.example.env
@@ -21,3 +21,6 @@ CLERK_SECRET_KEY=""
 CREATE_WEBHOOK_SIGNING_SECRET=""
 UPDATE_WEBHOOK_SIGNING_SECRET=""
 DELELTE_WEBHOOK_SIGNING_SECRET=""
+
+# Ably realtime
+ABLY_API_KEY=""
