--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@ably/chat": "^0.4.0",
     "@clerk/nextjs": "^6.11.0",
     "@prisma/client": "^6.3.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
+    "ably": "^2.6.3",
     "firebase-admin": "^13.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
