--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "ably": "^2.6.3",
+    "firebase": "^11.3.1",
     "firebase-admin": "^13.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
