--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@ably/chat": "^0.4.0",
     "@clerk/nextjs": "^6.11.0",
+    "@clerk/themes": "^2.2.19",
     "@prisma/client": "^6.3.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
