--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "ably": "^2.6.3",
+    "emoji-mart": "^5.6.0",
     "emoji-picker-react": "^4.12.0",
     "firebase": "^11.3.1",
     "firebase-admin": "^13.1.0",
@@ -31,9 +32,11 @@
     "prisma": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-emoji-render": "^2.0.1",
     "supertest": "^7.0.0",
     "svix": "^1.45.1",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "twemoji": "^14.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
